tests/syntax_error/bad_field.jou
def foo() -> void:
    bar.(1+2)  # Error: expected a field name, got '('
